Set close-exe on logfile fd, keep monitor FD open

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Jul 23 13:59:12 EST 2007 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/qemu_driver.c: keep monitor filehandle open, and set
+	close-on-exec flag for logfiles.
+
 Mon Jul 23 11:36:12 CEST 2007 Daniel Veillard <veillard@redhat.com>
 
 	* docs/virsh.pod virsh.1: update to document VIRSH_DEFAULT_CONNECT_URI
